Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4058

3 tables missing in P_S of MariaDB 10.0 compared to MySQL 5.6.9

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.0
    • 10.0.4
    • None
    • None
    • na

    Description

      MariaDB misses 3 tables in P_S compared to MySQL
      The most important is host_cache.
      And the less important.
      session_account_connect_attrs
      and
      session_connect_attrs

      Attachments

        Activity

          People

            timour Timour Katchaounov (Inactive)
            erkules erkan yanar
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2d 3h
                2d 3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.