MDEV-4058

MySQL 5.6.10 performance schema: merge of host_cache table